# HRules

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  hrules  hrules-gui  hrules-gui.bat  hrules-gui.ps1  hrules.bat  hrules.ps1  pyproject.toml  requirements.txt
src/hrules/: __init__.py  cli.py  color_utils.py  gui.py  report.py  scanner.py
tests/: test_report.py  test_scanner.py
workflows/: release.yml
